--- a/vignettes/quadratic-binding-equation.Rmd
+++ b/vignettes/quadratic-binding-equation.Rmd
@@ -2,7 +2,9 @@
 title: "Deriving the quadratic binding equation"
 author: "Guillaume Gaullier"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: 
+    rmarkdown::html_vignette:
+        toc: yes
 vignette: >
   %\VignetteIndexEntry{Deriving the quadratic binding equation}
   %\VignetteEngine{knitr::rmarkdown}
